# template-cpp

./: CMakeLists.txt  README.md  init.py  template.sln
project/: template.vcxproj  template.vcxproj.filters
